<resources>
    <string name="app_name">QRXfer</string>
    <string name="title_qr_file_transfer">QR File Transfer</string>
    <string name="send_file">Send File</string>
    <string name="receive_file">Receive File</string>
    <string name="no_file_selected">No file selected</string>
    <string name="select_file">Select File</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="save_file">Save File</string>
    <string name="waiting_for_qr_code">Waiting for QR code…</string>
    <string name="align_qr_code">Align QR code within the frame</string>
    <string name="scanning">Scanning…</string>
    <string name="finish">Finish</string>
    <string name="chunk_info">Chunk: %1$d/%2$d</string>
    <string name="receiving_progress">Receiving: %1$d%%</string>
    <string name="receiving_progress_with_missing">Receiving: %1$d%% - Missing chunks: %2$s</string>
    <string name="transfer_complete">Transfer complete!</string>
    <string name="file_saved">File saved successfully!</string>
    <string name="file_saved_to_downloads">File saved to Downloads!</string>
    <string name="file_saved_to_app">File saved to app storage</string>
    <string name="failed_to_save_file">Failed to save file</string>
    <string name="error_processing_file">Error: %1$s</string>
    <string name="permissions_granted">Permissions granted</string>
    <string name="permissions_denied">Permissions denied</string>
    <string name="camera_permission_required">Camera permission is required to scan QR codes</string>
    <string name="storage_permission_required">Storage permission is required to select files</string>
    <string name="no_app_for_file_type">No app found to open this file type</string>
    <string name="file_received">File received: %1$s</string>
    
    <!-- New strings for the redesigned UI -->
    <string name="file_selection">File Selection</string>
    <string name="generate_qr">Generate QR</string>
    <string name="transfer_settings">Transfer Settings</string>
    <string name="chunk_size">Chunk Size:</string>
    <string name="display_delay">Display Delay:</string>
    <string name="error_correction">Error Correction Level:</string>
    <string name="auto_advance">Auto Advance:</string>
    <string name="qr_code_display">QR Code Display</string>
    <string name="qr_code">QR Code</string>
    <string name="chunk_info_format">Chunk %1$d of %2$d</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="reset">Reset</string>
    <string name="open_file">Open File</string>
    <string name="send_description">Send files via QR codes</string>
    <string name="receive_description">Receive files via QR codes</string>
    <string name="app_description">Transfer files between devices without internet</string>
    <string name="send_icon">Send icon</string>
    <string name="receive_icon">Receive icon</string>
    <string name="send_button">Start Sending</string>
    <string name="receive_button">Start Receiving</string>
    <string name="file_saved_to">File saved to: %1$s</string>
    <string name="qr_generation_failed">Failed to generate QR code</string>
    <string name="advanced_settings">Advanced Settings</string>
    <string name="custom_chunk_size">Custom Chunk Size (bytes)</string>
    <string name="custom_delay">Custom Delay (ms)</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
</resources>